# domoticz

./: CMakeLists.txt
HomeKit/: CMakeLists.txt
hardware/: ColorSwitch.cpp  ColorSwitch.h  OpenZWave.cpp  OpenZWave.h
main/: EventSystem.cpp  WebServer.cpp  WebServer.h  mainworker.cpp
push/: HomeKitPush.cpp  HomeKitPush.h
